fix lombok runtime issue & refactor